Migrate InputHalService to AIDL types.
Test: atest CarServiceUnitTest:com.android.car.hal.InputHalServiceTest
Bug: 205774940
Change-Id: Ice931a71825a74aa44904ce6f393b0efcf3ee0fc