@@ -16,7 +16,9 @@
 package com.android.car.hal;
 
 import static android.car.CarOccupantZoneManager.DisplayTypeEnum;
-import static android.hardware.automotive.vehicle.V2_0.CustomInputType.CUSTOM_EVENT_F1;
+import static android.hardware.automotive.vehicle.CustomInputType.CUSTOM_EVENT_F1;
+
+import static com.android.car.CarServiceUtils.toIntArray;
 
 import static com.google.common.truth.Truth.assertThat;
 
@@ -34,21 +36,16 @@ import android.car.CarOccupantZoneManager;
 import android.car.input.CarInputManager;
 import android.car.input.CustomInputEvent;
 import android.car.input.RotaryEvent;
-import android.hardware.automotive.vehicle.V2_0.RotaryInputType;
-import android.hardware.automotive.vehicle.V2_0.VehicleDisplay;
-import android.hardware.automotive.vehicle.V2_0.VehicleHwKeyInputAction;
-import android.hardware.automotive.vehicle.V2_0.VehiclePropConfig;
-import android.hardware.automotive.vehicle.V2_0.VehiclePropValue;
-import android.hardware.automotive.vehicle.V2_0.VehicleProperty;
+import android.hardware.automotive.vehicle.RotaryInputType;
+import android.hardware.automotive.vehicle.VehicleDisplay;
+import android.hardware.automotive.vehicle.VehicleHwKeyInputAction;
+import android.hardware.automotive.vehicle.VehicleProperty;
 import android.view.Display;
 import android.view.KeyEvent;
 
 import androidx.test.filters.RequiresDevice;
 
-import com.android.car.vehiclehal.test.VehiclePropConfigBuilder;
-
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableSet;
+import com.android.car.vehiclehal.test.AidlVehiclePropConfigBuilder;
 
 import org.junit.After;
 import org.junit.Before;
@@ -69,12 +66,14 @@ public class InputHalServiceTest {
     @Mock InputHalService.InputListener mInputListener;
     @Mock LongSupplier mUptimeSupplier;
 
-    private static final VehiclePropConfig HW_KEY_INPUT_CONFIG =
-            VehiclePropConfigBuilder.newBuilder(VehicleProperty.HW_KEY_INPUT).build();
-    private static final VehiclePropConfig HW_ROTARY_INPUT_CONFIG =
-            VehiclePropConfigBuilder.newBuilder(VehicleProperty.HW_ROTARY_INPUT).build();
-    private static final VehiclePropConfig HW_CUSTOM_INPUT_CONFIG =
-            VehiclePropConfigBuilder.newBuilder(VehicleProperty.HW_CUSTOM_INPUT).build();
+    private static final HalPropConfig HW_KEY_INPUT_CONFIG = new AidlHalPropConfig(
+            AidlVehiclePropConfigBuilder.newBuilder(VehicleProperty.HW_KEY_INPUT).build());
+    private static final HalPropConfig HW_ROTARY_INPUT_CONFIG = new AidlHalPropConfig(
+            AidlVehiclePropConfigBuilder.newBuilder(VehicleProperty.HW_ROTARY_INPUT).build());
+    private static final HalPropConfig HW_CUSTOM_INPUT_CONFIG = new AidlHalPropConfig(
+            AidlVehiclePropConfigBuilder.newBuilder(VehicleProperty.HW_CUSTOM_INPUT).build());
+
+    private final HalPropValueBuilder mPropValueBuilder = new HalPropValueBuilder(/*isAidl=*/true);
 
     private enum Key {DOWN, UP}
 
@@ -100,19 +99,20 @@ public class InputHalServiceTest {
         mInputHalService.setInputListener(mInputListener);
 
         int anyDisplay = VehicleDisplay.MAIN;
-        mInputHalService.onHalEventsDeprecated(
-                ImmutableList.of(makeKeyPropValue(Key.DOWN, KeyEvent.KEYCODE_ENTER, anyDisplay)));
+        mInputHalService.onHalEvents(List.of(makeKeyPropValue(Key.DOWN, KeyEvent.KEYCODE_ENTER,
+                anyDisplay)));
         verify(mInputListener, never()).onKeyEvent(any(), anyInt());
     }
 
     @Test
     public void takesKeyInputProperty() {
-        Set<VehiclePropConfig> offeredProps = ImmutableSet.of(
-                VehiclePropConfigBuilder.newBuilder(VehicleProperty.ABS_ACTIVE).build(),
+        Set<HalPropConfig> offeredProps = Set.of(new AidlHalPropConfig(
+                AidlVehiclePropConfigBuilder.newBuilder(VehicleProperty.ABS_ACTIVE).build()),
                 HW_KEY_INPUT_CONFIG,
-                VehiclePropConfigBuilder.newBuilder(VehicleProperty.CURRENT_GEAR).build());
+                new AidlHalPropConfig(AidlVehiclePropConfigBuilder.newBuilder(
+                        VehicleProperty.CURRENT_GEAR).build()));
 
-        mInputHalService.takePropertiesDeprecated(offeredProps);
+        mInputHalService.takeProperties(offeredProps);
 
         assertThat(mInputHalService.isKeyInputSupported()).isTrue();
         assertThat(mInputHalService.isRotaryInputSupported()).isFalse();
@@ -121,12 +121,14 @@ public class InputHalServiceTest {
 
     @Test
     public void takesRotaryInputProperty() {
-        Set<VehiclePropConfig> offeredProps = ImmutableSet.of(
-                VehiclePropConfigBuilder.newBuilder(VehicleProperty.ABS_ACTIVE).build(),
+        Set<HalPropConfig> offeredProps = Set.of(
+                new AidlHalPropConfig(AidlVehiclePropConfigBuilder.newBuilder(
+                        VehicleProperty.ABS_ACTIVE).build()),
                 HW_ROTARY_INPUT_CONFIG,
-                VehiclePropConfigBuilder.newBuilder(VehicleProperty.CURRENT_GEAR).build());
+                new AidlHalPropConfig(AidlVehiclePropConfigBuilder.newBuilder(
+                        VehicleProperty.CURRENT_GEAR).build()));
 
-        mInputHalService.takePropertiesDeprecated(offeredProps);
+        mInputHalService.takeProperties(offeredProps);
 
         assertThat(mInputHalService.isRotaryInputSupported()).isTrue();
         assertThat(mInputHalService.isKeyInputSupported()).isFalse();
@@ -135,12 +137,14 @@ public class InputHalServiceTest {
 
     @Test
     public void takesCustomInputProperty() {
-        Set<VehiclePropConfig> offeredProps = ImmutableSet.of(
-                VehiclePropConfigBuilder.newBuilder(VehicleProperty.ABS_ACTIVE).build(),
+        Set<HalPropConfig> offeredProps = Set.of(
+                new AidlHalPropConfig(AidlVehiclePropConfigBuilder.newBuilder(
+                        VehicleProperty.ABS_ACTIVE).build()),
                 HW_CUSTOM_INPUT_CONFIG,
-                VehiclePropConfigBuilder.newBuilder(VehicleProperty.CURRENT_GEAR).build());
+                new AidlHalPropConfig(AidlVehiclePropConfigBuilder.newBuilder(
+                        VehicleProperty.CURRENT_GEAR).build()));
 
-        mInputHalService.takePropertiesDeprecated(offeredProps);
+        mInputHalService.takeProperties(offeredProps);
 
         assertThat(mInputHalService.isRotaryInputSupported()).isFalse();
         assertThat(mInputHalService.isKeyInputSupported()).isFalse();
@@ -149,14 +153,16 @@ public class InputHalServiceTest {
 
     @Test
     public void takesKeyAndRotaryAndCustomInputProperty() {
-        Set<VehiclePropConfig> offeredProps = ImmutableSet.of(
-                VehiclePropConfigBuilder.newBuilder(VehicleProperty.ABS_ACTIVE).build(),
+        Set<HalPropConfig> offeredProps = Set.of(
+                new AidlHalPropConfig(AidlVehiclePropConfigBuilder.newBuilder(
+                        VehicleProperty.ABS_ACTIVE).build()),
                 HW_KEY_INPUT_CONFIG,
                 HW_ROTARY_INPUT_CONFIG,
                 HW_CUSTOM_INPUT_CONFIG,
-                VehiclePropConfigBuilder.newBuilder(VehicleProperty.CURRENT_GEAR).build());
+                new AidlHalPropConfig(AidlVehiclePropConfigBuilder.newBuilder(
+                        VehicleProperty.CURRENT_GEAR).build()));
 
-        mInputHalService.takePropertiesDeprecated(offeredProps);
+        mInputHalService.takeProperties(offeredProps);
 
         assertThat(mInputHalService.isKeyInputSupported()).isTrue();
         assertThat(mInputHalService.isRotaryInputSupported()).isTrue();
@@ -197,8 +203,8 @@ public class InputHalServiceTest {
             return null;
         }).when(mInputListener).onKeyEvent(any(), eq(CarOccupantZoneManager.DISPLAY_TYPE_MAIN));
 
-        mInputHalService.onHalEventsDeprecated(
-                ImmutableList.of(
+        mInputHalService.onHalEvents(
+                List.of(
                         makeKeyPropValue(Key.DOWN, KeyEvent.KEYCODE_ENTER, VehicleDisplay.MAIN),
                         makeKeyPropValue(Key.DOWN, KeyEvent.KEYCODE_MENU, VehicleDisplay.MAIN)));
 
@@ -222,8 +228,8 @@ public class InputHalServiceTest {
         }).when(mInputListener).onKeyEvent(any(),
                 eq(CarOccupantZoneManager.DISPLAY_TYPE_INSTRUMENT_CLUSTER));
 
-        mInputHalService.onHalEventsDeprecated(
-                ImmutableList.of(
+        mInputHalService.onHalEvents(
+                List.of(
                         makeKeyPropValue(Key.DOWN, KeyEvent.KEYCODE_ENTER,
                                 VehicleDisplay.INSTRUMENT_CLUSTER),
                         makeKeyPropValue(Key.DOWN, KeyEvent.KEYCODE_MENU,
@@ -238,20 +244,21 @@ public class InputHalServiceTest {
     @Test
     public void dispatchesInputEvent_invalidInputEvent() {
         subscribeListener();
-        VehiclePropValue v = new VehiclePropValue();
-        v.prop = VehicleProperty.HW_KEY_INPUT;
+        HalPropValue v = mPropValueBuilder.build(VehicleProperty.HW_KEY_INPUT, /* areaId= */ 0);
         // Missing action, code, display_type.
-        mInputHalService.onHalEventsDeprecated(ImmutableList.of(v));
+        mInputHalService.onHalEvents(List.of(v));
         verify(mInputListener, never()).onKeyEvent(any(),  anyInt());
 
         // Missing code, display_type.
-        v.value.int32Values.add(VehicleHwKeyInputAction.ACTION_DOWN);
-        mInputHalService.onHalEventsDeprecated(ImmutableList.of(v));
+        v = mPropValueBuilder.build(VehicleProperty.HW_KEY_INPUT, /* areaId= */ 0,
+                VehicleHwKeyInputAction.ACTION_DOWN);
+        mInputHalService.onHalEvents(List.of(v));
         verify(mInputListener, never()).onKeyEvent(any(),  anyInt());
 
         // Missing display_type.
-        v.value.int32Values.add(KeyEvent.KEYCODE_ENTER);
-        mInputHalService.onHalEventsDeprecated(ImmutableList.of(v));
+        v = mPropValueBuilder.build(VehicleProperty.HW_KEY_INPUT, /* areaId= */ 0,
+                new int[]{VehicleHwKeyInputAction.ACTION_DOWN, KeyEvent.KEYCODE_ENTER});
+        mInputHalService.onHalEvents(List.of(v));
         verify(mInputListener, never()).onKeyEvent(any(),  anyInt());
     }
 
@@ -403,7 +410,7 @@ public class InputHalServiceTest {
         long timestampNanos = 12_345_678_901L;
 
         // Act
-        mInputHalService.onHalEventsDeprecated(ImmutableList.of(
+        mInputHalService.onHalEvents(List.of(
                 makeRotaryPropValue(RotaryInputType.ROTARY_INPUT_TYPE_AUDIO_VOLUME, 1,
                         timestampNanos, 0, VehicleDisplay.MAIN)));
 
@@ -437,7 +444,7 @@ public class InputHalServiceTest {
         int numberOfDetents = 3;
 
         // Act
-        mInputHalService.onHalEventsDeprecated(ImmutableList.of(
+        mInputHalService.onHalEvents(List.of(
                 makeRotaryPropValue(RotaryInputType.ROTARY_INPUT_TYPE_SYSTEM_NAVIGATION,
                         -numberOfDetents, timestampNanos, deltaNanos, VehicleDisplay.MAIN)));
 
@@ -457,45 +464,51 @@ public class InputHalServiceTest {
     @Test
     public void dispatchesRotaryEvent_invalidInputEvent() {
         subscribeListener();
-        VehiclePropValue v = new VehiclePropValue();
-        v.prop = VehicleProperty.HW_ROTARY_INPUT;
+        HalPropValue v = mPropValueBuilder.build(VehicleProperty.HW_ROTARY_INPUT, /* areaId= */ 0);
 
         // Missing rotaryInputType, detentCount, targetDisplayType.
-        mInputHalService.onHalEventsDeprecated(ImmutableList.of(v));
+        mInputHalService.onHalEvents(List.of(v));
         verify(mInputListener, never()).onRotaryEvent(any(),  anyInt());
 
         // Missing detentCount, targetDisplayType.
-        v.value.int32Values.add(RotaryInputType.ROTARY_INPUT_TYPE_SYSTEM_NAVIGATION);
-        mInputHalService.onHalEventsDeprecated(ImmutableList.of(v));
+        v = mPropValueBuilder.build(VehicleProperty.HW_ROTARY_INPUT, /* areaId= */ 0,
+                RotaryInputType.ROTARY_INPUT_TYPE_SYSTEM_NAVIGATION);
+        mInputHalService.onHalEvents(List.of(v));
         verify(mInputListener, never()).onRotaryEvent(any(),  anyInt());
 
         // Missing targetDisplayType.
-        v.value.int32Values.add(1);
-        mInputHalService.onHalEventsDeprecated(ImmutableList.of(v));
+        v = mPropValueBuilder.build(VehicleProperty.HW_ROTARY_INPUT, /* areaId= */ 0,
+                new int[]{RotaryInputType.ROTARY_INPUT_TYPE_SYSTEM_NAVIGATION, 1});
+        mInputHalService.onHalEvents(List.of(v));
         verify(mInputListener, never()).onRotaryEvent(any(),  anyInt());
 
-        // Add targetDisplayType.
-        v.value.int32Values.add(VehicleDisplay.MAIN);
-        // Set detentCount to 0.
-        v.value.int32Values.set(1, 0);
-        mInputHalService.onHalEventsDeprecated(ImmutableList.of(v));
+        // Add targetDisplayType and set detentCount to 0.
+        v = mPropValueBuilder.build(VehicleProperty.HW_ROTARY_INPUT, /* areaId= */ 0,
+                new int[]{RotaryInputType.ROTARY_INPUT_TYPE_SYSTEM_NAVIGATION, 0,
+                        VehicleDisplay.MAIN});
+        mInputHalService.onHalEvents(List.of(v));
         verify(mInputListener, never()).onRotaryEvent(any(),  anyInt());
 
         // Set detentCount to 1.
-        v.value.int32Values.set(1, 1);
         // Add additional unnecessary arguments so that the array size does not match detentCount.
-        v.value.int32Values.add(0);
-        mInputHalService.onHalEventsDeprecated(ImmutableList.of(v));
+        v = mPropValueBuilder.build(VehicleProperty.HW_ROTARY_INPUT, /* areaId= */ 1,
+                new int[]{RotaryInputType.ROTARY_INPUT_TYPE_SYSTEM_NAVIGATION, 1,
+                        VehicleDisplay.MAIN, 0});
+        mInputHalService.onHalEvents(List.of(v));
         verify(mInputListener, never()).onRotaryEvent(any(),  anyInt());
 
         // Set invalid detentCount.
-        v.value.int32Values.set(1, Integer.MAX_VALUE);
-        mInputHalService.onHalEventsDeprecated(ImmutableList.of(v));
+        v = mPropValueBuilder.build(VehicleProperty.HW_ROTARY_INPUT, /* areaId= */ 1,
+                new int[]{RotaryInputType.ROTARY_INPUT_TYPE_SYSTEM_NAVIGATION, Integer.MAX_VALUE,
+                        VehicleDisplay.MAIN, 0});
+        mInputHalService.onHalEvents(List.of(v));
         verify(mInputListener, never()).onRotaryEvent(any(),  anyInt());
 
         // Set invalid detentCount.
-        v.value.int32Values.set(1, Integer.MIN_VALUE);
-        mInputHalService.onHalEventsDeprecated(ImmutableList.of(v));
+        v = mPropValueBuilder.build(VehicleProperty.HW_ROTARY_INPUT, /* areaId= */ 1,
+                new int[]{RotaryInputType.ROTARY_INPUT_TYPE_SYSTEM_NAVIGATION, Integer.MIN_VALUE,
+                        VehicleDisplay.MAIN, 0});
+        mInputHalService.onHalEvents(List.of(v));
         verify(mInputListener, never()).onRotaryEvent(any(),  anyInt());
     }
 
@@ -513,11 +526,11 @@ public class InputHalServiceTest {
 
         // Arrange
         int repeatCounter = 1;
-        VehiclePropValue customInputPropValue = makeCustomInputPropValue(
+        HalPropValue customInputPropValue = makeCustomInputPropValue(
                 CUSTOM_EVENT_F1, VehicleDisplay.MAIN, repeatCounter);
 
         // Act
-        mInputHalService.onHalEventsDeprecated(ImmutableList.of(customInputPropValue));
+        mInputHalService.onHalEvents(List.of(customInputPropValue));
 
         // Assert
         assertThat(events).containsExactly(new CustomInputEvent(
@@ -539,11 +552,11 @@ public class InputHalServiceTest {
 
         // Arrange
         int repeatCounter = 1;
-        VehiclePropValue customInputPropValue = makeCustomInputPropValue(
+        HalPropValue customInputPropValue = makeCustomInputPropValue(
                 CUSTOM_EVENT_F1, VehicleDisplay.INSTRUMENT_CLUSTER, repeatCounter);
 
         // Act
-        mInputHalService.onHalEventsDeprecated(ImmutableList.of(customInputPropValue));
+        mInputHalService.onHalEvents(List.of(customInputPropValue));
 
         // Assert
         assertThat(events).containsExactly(new CustomInputEvent(
@@ -557,39 +570,43 @@ public class InputHalServiceTest {
         // Arrange mInputListener to capture incoming CustomInputEvent
         subscribeListener();
 
-        VehiclePropValue v = new VehiclePropValue();
+        HalPropValue v = mPropValueBuilder.build(VehicleProperty.HW_CUSTOM_INPUT, /* areaId= */ 0);
 
         // Missing inputCode, targetDisplayType, repeatCounter.
-        v.prop = VehicleProperty.HW_CUSTOM_INPUT;
-        mInputHalService.onHalEventsDeprecated(ImmutableList.of(v));
+        mInputHalService.onHalEvents(List.of(v));
         verify(mInputListener, never()).onCustomInputEvent(any());
 
         // Missing targetDisplayType, repeatCounter.
-        v.value.int32Values.add(CustomInputEvent.INPUT_CODE_F1);
-        mInputHalService.onHalEventsDeprecated(ImmutableList.of(v));
+        v = mPropValueBuilder.build(VehicleProperty.HW_CUSTOM_INPUT, /* areaId= */ 0,
+                CustomInputEvent.INPUT_CODE_F1);
+        mInputHalService.onHalEvents(List.of(v));
         verify(mInputListener, never()).onCustomInputEvent(any());
 
         // Missing repeatCounter.
-        v.value.int32Values.add(CarOccupantZoneManager.DISPLAY_TYPE_INSTRUMENT_CLUSTER);
-        mInputHalService.onHalEventsDeprecated(ImmutableList.of(v));
+        v = mPropValueBuilder.build(VehicleProperty.HW_CUSTOM_INPUT, /* areaId= */ 0,
+                new int[]{CustomInputEvent.INPUT_CODE_F1,
+                        CarOccupantZoneManager.DISPLAY_TYPE_INSTRUMENT_CLUSTER});
+        mInputHalService.onHalEvents(List.of(v));
+
         verify(mInputListener, never()).onCustomInputEvent(any());
 
-        // Add repeatCounter.
-        v.value.int32Values.add(1);
-
-        // Set invalid input code.
-        v.value.int32Values.set(0, CustomInputEvent.INPUT_CODE_F1 - 1);
-        mInputHalService.onHalEventsDeprecated(ImmutableList.of(v));
+        // Add repeatCounter and set invalid input code.
+        v = mPropValueBuilder.build(VehicleProperty.HW_CUSTOM_INPUT, /* areaId= */ 0,
+                new int[]{CustomInputEvent.INPUT_CODE_F1 - 1,
+                        CarOccupantZoneManager.DISPLAY_TYPE_INSTRUMENT_CLUSTER, 1});
+        mInputHalService.onHalEvents(List.of(v));
         verify(mInputListener, never()).onCustomInputEvent(any());
 
         // Set invalid input code.
-        v.value.int32Values.set(0, CustomInputEvent.INPUT_CODE_F10 + 1);
-        mInputHalService.onHalEventsDeprecated(ImmutableList.of(v));
+        v = mPropValueBuilder.build(VehicleProperty.HW_CUSTOM_INPUT, /* areaId= */ 0,
+                new int[]{CustomInputEvent.INPUT_CODE_F10 + 1,
+                        CarOccupantZoneManager.DISPLAY_TYPE_INSTRUMENT_CLUSTER, 1});
+        mInputHalService.onHalEvents(List.of(v));
         verify(mInputListener, never()).onCustomInputEvent(any());
     }
 
     private void subscribeListener() {
-        mInputHalService.takePropertiesDeprecated(ImmutableSet.of(HW_KEY_INPUT_CONFIG));
+        mInputHalService.takeProperties(Set.of(HW_KEY_INPUT_CONFIG));
         assertThat(mInputHalService.isKeyInputSupported()).isTrue();
 
         mInputHalService.setInputListener(mInputListener);
@@ -600,8 +617,8 @@ public class InputHalServiceTest {
             @DisplayTypeEnum int expectedDisplay) {
         ArgumentCaptor<KeyEvent> captor = ArgumentCaptor.forClass(KeyEvent.class);
         reset(mInputListener);
-        mInputHalService.onHalEventsDeprecated(
-                ImmutableList.of(makeKeyPropValue(action, code, actualDisplay)));
+        mInputHalService.onHalEvents(
+                List.of(makeKeyPropValue(action, code, actualDisplay)));
         verify(mInputListener).onKeyEvent(captor.capture(), eq(expectedDisplay));
         reset(mInputListener);
         return captor.getValue();
@@ -611,60 +628,46 @@ public class InputHalServiceTest {
             @DisplayTypeEnum int expectedDisplay) {
         ArgumentCaptor<KeyEvent> captor = ArgumentCaptor.forClass(KeyEvent.class);
         reset(mInputListener);
-        mInputHalService.onHalEventsDeprecated(
-                ImmutableList.of(makeKeyPropValueWithIndents(code, indents, actualDisplay)));
+        mInputHalService.onHalEvents(
+                List.of(makeKeyPropValueWithIndents(code, indents, actualDisplay)));
         verify(mInputListener, times(indents)).onKeyEvent(captor.capture(),
                 eq(expectedDisplay));
         reset(mInputListener);
         return captor.getValue();
     }
 
-    private VehiclePropValue makeKeyPropValue(Key action, int code,
+    private HalPropValue makeKeyPropValue(Key action, int code,
             @DisplayTypeEnum int targetDisplayType) {
-        VehiclePropValue v = new VehiclePropValue();
-        v.prop = VehicleProperty.HW_KEY_INPUT;
-        v.value.int32Values.add(
-                (action == Key.DOWN
+        int actionValue = (action == Key.DOWN
                         ? VehicleHwKeyInputAction.ACTION_DOWN
-                        : VehicleHwKeyInputAction.ACTION_UP));
-        v.value.int32Values.add(code);
-        v.value.int32Values.add(targetDisplayType);
-        return v;
+                        : VehicleHwKeyInputAction.ACTION_UP);
+        return mPropValueBuilder.build(VehicleProperty.HW_KEY_INPUT, /* areaId= */ 0,
+                new int[]{actionValue, code, targetDisplayType});
     }
 
-    private VehiclePropValue makeKeyPropValueWithIndents(int code, int indents,
+    private HalPropValue makeKeyPropValueWithIndents(int code, int indents,
             @DisplayTypeEnum int targetDisplayType) {
-        VehiclePropValue v = new VehiclePropValue();
-        v.prop = VehicleProperty.HW_KEY_INPUT;
         // Only Key.down can have indents.
-        v.value.int32Values.add(VehicleHwKeyInputAction.ACTION_DOWN);
-        v.value.int32Values.add(code);
-        v.value.int32Values.add(targetDisplayType);
-        v.value.int32Values.add(indents);
-        return v;
+        return mPropValueBuilder.build(VehicleProperty.HW_KEY_INPUT, /* areaId= */ 0,
+                new int[]{VehicleHwKeyInputAction.ACTION_DOWN, code, targetDisplayType, indents});
     }
 
-    private VehiclePropValue makeRotaryPropValue(int rotaryInputType, int detents, long timestamp,
+    private HalPropValue makeRotaryPropValue(int rotaryInputType, int detents, long timestamp,
             int delayBetweenDetents, @DisplayTypeEnum int targetDisplayType) {
-        VehiclePropValue v = new VehiclePropValue();
-        v.prop = VehicleProperty.HW_ROTARY_INPUT;
-        v.value.int32Values.add(rotaryInputType);
-        v.value.int32Values.add(detents);
-        v.value.int32Values.add(targetDisplayType);
+        ArrayList<Integer> int32Values = new ArrayList<>();
+        int32Values.add(rotaryInputType);
+        int32Values.add(detents);
+        int32Values.add(targetDisplayType);
         for (int i = 0; i < Math.abs(detents) - 1; i++) {
-            v.value.int32Values.add(delayBetweenDetents);
+            int32Values.add(delayBetweenDetents);
         }
-        v.timestamp = timestamp;
-        return v;
+        return mPropValueBuilder.build(VehicleProperty.HW_ROTARY_INPUT, /* areaId= */ 0, timestamp,
+                /*status=*/0, toIntArray(int32Values));
     }
 
-    private VehiclePropValue makeCustomInputPropValue(int inputCode,
+    private HalPropValue makeCustomInputPropValue(int inputCode,
             @DisplayTypeEnum int targetDisplayType, int repeatCounter) {
-        VehiclePropValue v = new VehiclePropValue();
-        v.prop = VehicleProperty.HW_CUSTOM_INPUT;
-        v.value.int32Values.add(inputCode);
-        v.value.int32Values.add(targetDisplayType);
-        v.value.int32Values.add(repeatCounter);
-        return v;
+        return mPropValueBuilder.build(VehicleProperty.HW_CUSTOM_INPUT, /* areaId= */ 0,
+                new int[]{inputCode, targetDisplayType, repeatCounter});
     }
 }
